--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "plante",
+  "name": "produit",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,13 +7,14 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "@mdi/font": "5.9.55",
+    "@mdi/font": "^5.9.55",
+    "@mdi/js": "^7.1.96",
     "axios": "^1.2.2",
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vuetify": "^3.0.0-beta.0",
+    "vuetify": "^3.1.10",
     "vuex": "^4.0.0",
     "webfontloader": "^1.0.0"
   },
